2008-07-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/common.py:
	* test/test_module.py:
	* test/test_stdlib.py:
	  Switch to mixedCase as Neil prefers.

2008-07-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  Don't pollute sys.path by inserting every moduleDir into it.
	  This allows projects to have for example a gtk.py file in a
	  package that does not conflict with the gtk system library.
	  Instead, pollute it right before loading the module, then clean up
	  immediately after.

2008-07-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* setup.py:
	  If installing to a staging root, don't include this path in the
	  install_lib dir.
	* setup.cfg:
	  Set optimize = 1 to make rpm not complain about installed but
	  missing .pyo files.
	  Fixes python setup.py bdist_rpm

2008-07-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  Make sure args passed for checking now create PyCheckerModule
	  instances with moduleDir set properly.  This triggers the new
	  code behaviour where modules are stored as a moduleName, moduleDir
	  tuple in pcmodules.py, making sure same-named modules get treated
	  separately.
	  New test suite now passes again.
	  Fixes #1563572.

2008-07-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/input/getmodule/A/C.py:
	* test/input/getmodule/A/__init__.py:
	* test/input/getmodule/B/C.py:
	* test/input/getmodule/B/__init__.py:
	* test/input/getmodule/__init__.py:
	* test/input/test_getmodule.py:
	* test/test_module.py:
	* test/main.py:
	  Add a test that shows how warnings in modules with the same name,
	  but different directories, shadow each other. See
	  http://sourceforge.net/tracker/index.php?func=detail&aid=1563572&group_id=24686&atid=382217

2008-07-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/common.py:
	  add check_multiple test method that allows checking more than one
	  argument.